<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.ffmpeg.imageffects.EffectImage" >

    <com.android.ffmpeg.imageffects.view.SlidingUpPanelLayout
        xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:dragView="@+id/dragView"
        sothree:panelHeight="68dp"
        sothree:paralaxOffset="100dp"
        sothree:shadowHeight="4dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:clickable="true"
                android:layout_height="match_parent" />

           
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/dragView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_view_rounded_single"
            android:clickable="true"
            android:focusable="false"
            android:orientation="vertical" >
            
            <Button
                  android:id="@+id/btn_pick_image"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentLeft="true"
                  android:layout_below="@+id/et_txt"
                  android:text="@string/select_image"
                  android:textSize="14sp" />
            
             <EditText
                android:id="@+id/et_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:hint="@string/enter_text" />
             
             <EditText
                android:id="@+id/et_txt_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:inputType="number"
                android:singleLine="true"
                android:hint="Text Size" />
             
             
             <TextView 
                 android:id="@+id/tv_choose_color"
                 android:layout_width="match_parent"
                 android:layout_marginTop="25dp"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
                 android:text="Select Text Color"/>

             <Spinner
                 android:id="@+id/sp_color"
                 android:layout_width="match_parent"
                 android:layout_height="35dp" />

            <Button
                android:id="@+id/btn_save_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"               
                android:text="@string/save_image"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_clear_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_txt"
                android:layout_centerInParent="true"
                android:text="@string/clear_all"
                android:textSize="14sp" />

          

       </LinearLayout>
   </com.android.ffmpeg.imageffects.view.SlidingUpPanelLayout>

</RelativeLayout>