<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.ffmpeg.imageffects.EffectImage" >

    <com.android.ffmpeg.imageffects.view.SlidingUpPanelLayout
        xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:dragView="@+id/dragView"
        sothree:panelHeight="68dp"
        sothree:paralaxOffset="100dp"
        sothree:shadowHeight="4dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <com.android.ffmpeg.imageffects.view.TouchImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/et_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:hint="@string/enter_text" />

            <Button
                android:id="@+id/btn_save_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/et_txt"
                android:text="@string/save_image"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_clear_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_txt"
                android:layout_centerInParent="true"
                android:text="@string/clear_all"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_pick_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/et_txt"
                android:text="@string/select_image"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/dragView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_view_rounded_single"
            android:clickable="true"
            android:focusable="false"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_view_rounded_single"
                android:clickable="true"
                android:focusable="false"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Red"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/red_seekbar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:progress="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Green"
                    android:textColor="#fcfcfc"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/green_seekbar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:progress="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Blue"
                    android:textColor="#fcfcfc"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/blue_seekbar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:progress="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_grascale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/applyGreyscaleEffect" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/applyGreyscaleEffect" />
            </LinearLayout>
        </LinearLayout>
    </com.android.ffmpeg.imageffects.view.SlidingUpPanelLayout>

</RelativeLayout>